<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mtb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/fcToolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle= "bold"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:text="@string/settings_general"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:background="#A79D9D" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="15sp"
        android:text="@string/settings_language"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_lang_change"
        android:layout_marginStart="8dp"
        android:text="@string/language_default"
        android:textSize="15sp"
        android:textColor="#DB9823" />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_data_usage"
        android:layout_marginStart="8dp"
        android:textSize="15sp"
        android:text="@string/settings_data_usage" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_data_usage_change"
        android:layout_marginStart="8dp"
        android:text="@string/settings_data_usage_change"
        android:textSize="15sp"
        android:textColor="#DB9823" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle= "bold"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:text="@string/settings_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:background="#A79D9D" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_content_type"
        android:layout_marginStart="8dp"
        android:text="@string/settings_content_type"
        android:textSize="15sp"
        android:textColor="#DB9823" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/settings_content_type_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        mtb:values="@array/settings_content_type_values"
        android:background="@drawable/button_round"
        mtb:mstbPrimaryColor="@color/mtb_gray"
        mtb:mstbSecondaryColor="@color/color_general"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:background="#A79D9D" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_video_quality"
        android:layout_marginStart="8dp"
        android:text="@string/settings_video_quality"
        android:textSize="15sp"
        android:textColor="#DB9823" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_video_quality_change"
        android:layout_marginStart="8dp"
        android:text="@string/settings_video_quality_change"
        android:textSize="15sp"
        android:textColor="#DB9823" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle= "bold"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:text="@string/settings_measurements"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:background="#A79D9D" />

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/settings_metric_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        mtb:values="@array/settings_measurements_values"
        mtb:mstbPrimaryColor="@color/mtb_gray"
        mtb:mstbSecondaryColor="@color/color_general"/>




</LinearLayout>