<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/profile_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_length_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="42dp"
        android:text="@string/password_rule" />

    <Button
        android:id="@+id/profile_login"
        android:layout_marginTop="15dp"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:background="@drawable/button_round"
        android:layout_gravity="center"
        android:text="@string/prof_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:background="#A79D9D" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#020202"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/sign_account" />

    <TextView
        android:id="@+id/profile_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prof_sign_up"
        android:layout_gravity="center"
        android:textColor="#B38867"
        android:textSize="20sp"/>
</LinearLayout>