<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_general">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="1000dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id='@+id/linear_layout_edit_profile_1'
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@null"
                        android:layout_marginStart="5dp"
                        android:id="@+id/edit_profile_close_icon"
                        android:contentDescription="@string/edit_profile_cancel_image"
                        android:src="@drawable/ic_close"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/edit_profile_name"
                        android:textColor="#292525"
                        android:layout_gravity="center"
                        android:layout_marginStart="130dp"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_profile_done"
                        android:layout_marginTop="16dp"
                        android:id="@+id/edit_profile_done"
                        android:layout_marginStart="85dp"
                        android:textSize="18sp"
                        android:textColor="@color/color_general"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/edit_profile_divider"
                    android:background="#A79D9D" />

                <ImageButton
                    android:id="@+id/edit_profile_change_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:background="@drawable/round_corners"
                    android:src="@drawable/ic_asset_pencil"
                    android:contentDescription="@string/edit_profile_icon_change" />

                <ImageView
                    android:id="@+id/edit_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-19dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/edit_profile_icon_change"
                    android:src="@drawable/ic_asset_image_placeholder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="42dp"

                    android:layout_marginRight="42dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:id="@+id/edit_profile_name"
                        android:hint="@string/edit_text_profile_name"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="42dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_email_layout"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/edit_text_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="#A79D9D" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="42dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_password_layout"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_profile_password"
                        android:hint="@string/edit_text_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/edit_profile_password_length_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="58dp"
                    android:layout_marginEnd="42dp"
                    android:text="@string/password_rule" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="42dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_confirm_password_layout"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_profile_confirm_password"
                        android:hint="@string/edit_profile_confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/edit_profile_log_out_button"
                    android:layout_width="296dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_round"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:text="@string/edit_profile_log_out" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>